Actualizado para la segunda entrega parcial